RESOLVED FIXED167699
Serialization of custom props in longhand should be "" not value of shorthand
https://bugs.webkit.org/show_bug.cgi?id=167699
Summary Serialization of custom props in longhand should be "" not value of shorthand
Greg Whitworth
Reported 2017-02-01 11:00:37 PST
Example URL: https://jsfiddle.net/ok8uwunf/ Steps to reproduce the problem: 1. Open https://jsfiddle.net/ok8uwunf/ 2. Look at value displayed in target element What is the expected behavior? ================================ The value should be "" since the variable substitution hasn't occurred What went wrong? ================================ It seems that Blink doesn't follow this line of the spec: "Pending-substitution values must be serialized as the empty string, if an API allows them to be observed." Since we are looking at specified style, this needs to be an empty string. Firefox: no repro Edge: no repro Blink: Repro
Attachments
Patch (3.84 KB, patch)
2017-03-24 16:00 PDT, Dean Jackson
sam: review+
Radar WebKit Bug Importer
Comment 1 2017-02-02 00:13:58 PST
Dean Jackson
Comment 2 2017-03-24 16:00:38 PDT
Sam Weinig
Comment 3 2017-03-24 16:04:10 PDT
Comment on attachment 305329 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=305329&action=review > LayoutTests/fast/css/variables/rule-property-get.html:9 > +/* https://www.w3.org/TR/css-variables/#variables-in-shorthands > + "Pending-substitution values must be serialized as the empty string, if an API allows them to be observed." */ I think this comment could use some context, explaining what the test is testing.
Dean Jackson
Comment 4 2017-03-24 16:18:26 PDT
Note You need to log in before you can comment on or make changes to this bug.