Serialization of custom props in longhand should be "" not value of shorthand https://bugs.webkit.org/show_bug.cgi?id=167699 <rdar://problem/30324200>

Reviewed by Sam Weinig.

Source/WebCore:

https://www.w3.org/TR/css-variables/#variables-in-shorthands says
"Pending-substitution values must be serialized as the empty string, if
an API allows them to be observed."

We were returning the cssText instead.

Test: fast/css/variables/rule-property-get.html has been updated.

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue): Return the empty string
if we're a pending substitution value.

LayoutTests:

* fast/css/variables/rule-property-get-expected.html:
* fast/css/variables/rule-property-get.html:

Canonical link: https://commits.webkit.org/187008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214383 268f45cc-cd09-0410-ab3c-d52691b4dbfc